@@ -1,11 +1,18 @@
 package de.teamlapen.faction.common.factions;
 
-import com.google.common.collect.ImmutableMap;
+import de.teamlapen.faction.api.factions.FactionProperties;
+import de.teamlapen.faction.api.factions.IFaction;
 import de.teamlapen.faction.api.factions.IPlayableFaction;
-import de.teamlapen.faction.api.factions.lord.ILordPlayerEntry;
 import de.teamlapen.faction.api.factions.lord.ILordTitleProvider;
 import de.teamlapen.faction.api.world.entities.player.IFactionPlayer;
 import de.teamlapen.faction.api.world.items.IRefinementItem;
+import de.teamlapen.faction.api.world.items.RefinementItems;
+import de.teamlapen.faction.common.core.FactionDataComponents;
+import net.minecraft.core.Holder;
+import net.minecraft.core.HolderLookup;
+import net.minecraft.core.component.DataComponentInitializers;
+import net.minecraft.core.component.DataComponentMap;
+import net.minecraft.resources.ResourceKey;
 import net.minecraft.util.RandomSource;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.Item;
@@ -14,72 +21,60 @@ import org.jetbrains.annotations.Nullable;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.Map;
-import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 /**
  * Represents one playable faction (e.g. Vampire Player)
  * One instance should be used for players and entities at the same time.
  */
 public class PlayableFaction<T extends IFactionPlayer<T>> extends Faction<T> implements IPlayableFaction<T> {
-    private final int highestLevel;
-    @Nullable
-    private final ILordPlayerEntry lord;
-    private final Supplier<AttachmentType<T>> playerCapabilitySupplier;
-    private final Map<IRefinementItem.AccessorySlotType, List<Supplier<IRefinementItem>>> refinementItemBySlot;
 
-    PlayableFaction(PlayableFactionBuilder<T> builder) {
-        super(builder);
-        this.highestLevel = builder.highestLevel;
-        this.lord = builder.lord;
-        this.playerCapabilitySupplier = builder.playerCapabilitySupplier;
-        ImmutableMap.Builder<IRefinementItem.AccessorySlotType, List<Supplier<IRefinementItem>>> refinementItemBuilder = ImmutableMap.builder();
-        builder.refinementItemBySlot.forEach((type, list) -> refinementItemBuilder.put(type, List.copyOf(list)));
-        this.refinementItemBySlot = refinementItemBuilder.build();
+    public PlayableFaction(FactionProperties properties) {
+        super(properties.withValidator(x -> {
+            if (!x.has(FactionDataComponents.PLAYER_CAPABILITY)) {
+                throw new IllegalStateException("A playable faction needs a player capability");
+            }
+        }));
     }
 
     @Override
     public int getHighestLordLevel() {
-        if (lord == null) return 0;
-        return this.lord.maxLevel();
+        return components().getOrDefault(FactionDataComponents.MAX_LORD_LEVEL, 0);
     }
 
     @Override
     public int getHighestReachableLevel() {
-        return highestLevel;
-    }
-
-    @Nullable
-    @Override
-    public ILordTitleProvider lordTitles() {
-        if (lord == null) return null;
-        return this.lord.lordTitleFunction();
+        return components().getOrDefault(FactionDataComponents.MAX_LEVEL, 1);
     }
 
     @Override
     public T getPlayerCapability(Player player) {
-        return player.getData(playerCapabilitySupplier.get());
+        var attachmentType = components().get(FactionDataComponents.PLAYER_CAPABILITY);
+        assert attachmentType != null;
+        //noinspection unchecked
+        return player.getData((AttachmentType<T>) attachmentType.value());
     }
 
     @Override
     public boolean hasRefinements() {
-        return !this.refinementItemBySlot.isEmpty();
+        return components().has(FactionDataComponents.REFINEMENTS);
     }
 
     @Override
     public <Z extends Item & IRefinementItem> Z getRandomRefinementItem(RandomSource random, IRefinementItem.AccessorySlotType type) {
-        List<Supplier<IRefinementItem>> iRefinementItems = this.refinementItemBySlot.get(type);
-        return ((Z) iRefinementItems.get(random.nextInt(iRefinementItems.size())).get());
+        RefinementItems orDefault = components().getOrDefault(FactionDataComponents.REFINEMENTS, RefinementItems.EMPTY);
+        List<IRefinementItem> iRefinementItems = orDefault.stream(type).toList();
+        return ((Z) iRefinementItems.get(random.nextInt(iRefinementItems.size())));
     }
 
     @Override
     public Collection<IRefinementItem> getRefinementItems() {
-        return this.refinementItemBySlot.values().stream().flatMap(Collection::stream).map(Supplier::get).distinct().collect(Collectors.toList());
+        RefinementItems orDefault = components().getOrDefault(FactionDataComponents.REFINEMENTS, RefinementItems.EMPTY);
+        return orDefault.stream().toList();
     }
 
     @Override
     public Collection<IRefinementItem> getRefinementItems(IRefinementItem.AccessorySlotType type) {
-        return this.refinementItemBySlot.getOrDefault(type, List.of()).stream().map(Supplier::get).collect(Collectors.toList());
+        RefinementItems orDefault = components().getOrDefault(FactionDataComponents.REFINEMENTS, RefinementItems.EMPTY);
+        return orDefault.stream(type).toList();
     }
 }
